cluster/apps/default/authelia/app/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name authelia
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`authelia.${SECRET_DOMAIN}`)
      services:
        - name: *name
          port: 9091
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: authelia
  namespace: default
  labels:
    app.kubernetes.io/name: authelia
spec:
  forwardAuth:
    address: http://authelia.default.svc.cluster.local:9091/api/verify?rd=https://authelia.${SECRET_DOMAIN}
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Email
